# boxing-a-cat

./: README.md  pyproject.toml  requirements.txt  setup.cfg
src/example_package/: boxing_cat_solver.py  command_line_interface.py  example.py
tests/: new tests.py  test_example.py
