[metadata]
name = boxing-a-cat
version = 0.0.1
author = Zak Qureshi
author_email = electric.zq@gmail.com
description = A package for solving the Schrödinger equation
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/princezako/boxing-a-cat.git
project_urls =
    Bug Tracker = https://github.com/GregoryAshton/template_project_PH3010_advanced_python/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.7

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    add_one = example_package.command_line_interface:main
